data/derived/comb/progs/unify/prog1213.ml.out
Characters 8-25:
  let _ = List.append [0;0]@[1;1] [1];;
          ^^^^^^^^^^^^^^^^^
Error: This expression has type int list -> int list
       but an expression was expected of type 'a list
